# CMakeTestApp

./: CMakeLists.txt  README.md  Readme.txt
inc/: appconfig.h  appconfig.h.in
src/: testapp.c
